test/broken.swift
extension X : P { } // expected-error{{cannot find type 'X' in scope}}
